# Capstone-Project--RAG-Chatbot

./: .gitignore  Milestones.txt  README.md  edu_scraper.py  pyproject.toml  requirements.txt
Web_Scraper/: edu_scraper.py  prep_entities.py  seed_urls.py
backend/: README.md
backend/app/: __init__.py  auth.py  config.py  llm.py  main.py  models.py  rag.py  routes.py  store.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/login/: page.js
nllb_pipeline/: README.md  api_server.py  extract.py  rag_query.py  split_sentences.py  translate_nllb.py
pipeline/: README.md  embed_sentences.py  extract.py  rag_query.py  split_sentences.py  translate.py
pipeline_old/: README.md  query_tester.py  translate.py
scripts/: edu_scraper.py  embed.py  rag.py  seed_urls.py
translator/: preprocess.py  query.py
