[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argostranslate>=1.10.0",
    "beautifulsoup4>=4.14.2",
    "ftfy>=6.3.1",
    "langdetect>=1.0.9",
    "pdfplumber>=0.11.8",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
